src/components/Footer/Footer.css
.footer-social {
    display: flex;
    justify-content: flex-end;
}

.footer-social > * {
   padding: 0.5rem;
   margin-left: 0.25rem;
   font-weight: 700;
   font-size: 0.9rem;
}

.footer-row {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    grid-auto-rows: auto;
    padding-top: 1.5rem;
    padding-bottom: 2rem;
}

.footer-line-bottom {
    display: flex;
    justify-content: space-between;
    padding-block: 1.5rem;
}

.footer-column {
    list-style: none;
    padding: 0;
    margin-block: 0.875rem;
    position: relative;
}

.footer-column h2 {
    margin-block: 0;
    font-size: 0.9rem;
    text-transform: uppercase;
}

.footer-line-bottom-menu {
    display: flex;
    justify-content: flex-end;
    padding: 0;
    font-size: var(--font-size-xs);
    margin-block: 0;
}

.footer-line-bottom-menu .footer-nav-list-item {
    display: flex;
    margin-left: 20px;
}

.footer-line-bottom-wrapper {
    border-top: 1px solid rgba(255, 255, 255, 0.2);

}


.footer-column .footer-nav-list-item {
    padding-block: 0.4rem;
}

.footer-nav-list-item:has(a):hover  {
    transform: translateY(-1px);
}

.footer-nav-link {
    color: inherit;
}

.footer-nav-link:hover {
    color: inherit;
}

